assignment validation added
