# routes/assignments.js
@@ -1,16 +1,16 @@
 const router = require("express").Router();
 
 const assignmentController = require("../controllers/assignments");
-const validation = require("../middleware/historyValidation");
+const validation = require("../middleware/assignmentValidation");
 
 router.get("/", assignmentController.getAll);
 
 router.get("/:id", assignmentController.getSingle);
 
-router.post("/", assignmentController.createAssignment);
+router.post("/", validation.saveAssignment,assignmentController.createAssignment);
 
-router.put("/:id", assignmentController.updateAssignment);
+router.put("/:id", validation.saveAssignment,assignmentController.updateAssignment);
 
-router.delete("/:id", assignmentController.deleteAssignment);
+router.delete("/:id",assignmentController.deleteAssignment);
 
 module.exports = router;
